# Arlo-Runtime

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.worker  PROJECT_PLAN.md  README.md  RESEARCH_IMPROVEMENTS.md  SIDE_HUSTLE_IMPROVEMENTS.md  alembic.ini  best_strategy_run3.json  docker-compose.yml  pyproject.toml  saved_evolution_10_8fe729c4.json  saved_evolution_11_be8fb248.json  saved_evolution_12_86202839.json  saved_evolution_1_be7bdbc3.json  saved_evolution_1_d055d15d.json  saved_evolution_1_ece15d67.json  saved_evolution_2_4ac263bc.json  saved_evolution_2_725cd68c.json  saved_evolution_2_992f4b54.json  saved_evolution_3_47193474.json  saved_evolution_3_b2d8a36c.json  saved_evolution_3_e1c579d3.json  saved_evolution_4_024042c7.json  saved_evolution_4_8167dec4.json  saved_evolution_4_8fe729c4.json  saved_evolution_5_7f924eec.json  saved_evolution_5_a4e645e8.json  saved_evolution_5_be8fb248.json  saved_evolution_6_07be82e5.json  saved_evolution_6_86202839.json  saved_evolution_6_95fe7eb1.json  saved_evolution_7_be7bdbc3.json  saved_evolution_8_4ac263bc.json  saved_evolution_9_47193474.json  saved_workflow_1_aff58d46.json  saved_workflow_2_a790f034.json  (+4 more)
alembic/: env.py
app/: main.py
docker/: cross_run_facts.template.json  init-n8n-db.sql  worker-entrypoint.sh
docs/: ADDING_A_TEMPLATE.md  n8n_v2_api_findings.md
scripts/: build_from_ranking.sh  build_from_spec.sh  create_builder_job.sh  create_test_job.sh  migrate.sh  monitor_evolution.sh  resume_evolution.sh  run_apartment_scan.sh  run_evolution.sh  run_freelance_scanner.sh  (+5 more)
(+87 files in other folders)
