[project]
name = "arlo-runtime"
version = "0.1.0"
description = "Backend execution engine for Arlo"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Share one event loop across the whole test session. The async SQLAlchemy
# engine in app/db/engine.py is created at import time and binds its
# connection pool to whatever loop is active when the first query runs;
# without these, every test gets a fresh loop and pooled connections die
# with "another operation is in progress" / "attached to a different loop".
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
